--- a/movie/templates/statistics.html
+++ b/movie/templates/statistics.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<body>
-    <h3>Movies per year chart</h3>
-    <img src="data:image/png;base64,{{ graphic }}" alt="Movies per year chart">
-</body>
+<h3>Movies per Year Chart</h3>
+<img src="data:image/png;base64,{{ graphic_years }}" alt="Movies per year chart">
+
+<h3>Movies per Genre Chart</h3>
+<img src="data:image/png;base64,{{ graphic_genres }}" alt="Movies per genre chart">
 
 {% endblock content %}
+
