--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -3,42 +3,42 @@
 
 <div class="container">
     <form action="">
-        <div class="mb-3"> <!--agrega espacio inferior de 3 unidades-->
-            <label for="searchMovie" class="form-label"> <!--asocia un texto descriptivo con un campo de entrada en un formulario-->
-                Search for Movie:
-            </label>
+        <div class="mb-3">
+            <label for="searchMovie" class="form-label">Search for Movie:</label>
             <input type="text" class="form-control" name="searchMovie"/>
         </div>
         <button type="submit" class="btn btn-primary">Search</button>
     </form>   
 
-
-    <p>Searching for {{searchTerm}}</p> 
-        <div class="row row-cols-1 row-cols-md-3 g-4"> <!--define una fila en una ciadricula con una columna en pantallas extra pequeñas-->
+    <p>Searching for {{ searchTerm }}</p> 
+    <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for movie in movies %}
-        <div v-for="movie in movies" class="col">
+        <div class="col">
             <div class="card">
-            <img src="{{ movie.image.url }}" class="card-img-top" alt=". . .">
-            <div class="card-body">
-                <h5 class="card-title">{{ movie.title}}</h5>
-                <p class="card-text">{{movie.description}} </p>
-                {% if movie.url %}
-                    <a href="{{ movie.url }}" class="btn btn-primary"> Movie Link </a>
-                {% endif %}
+                <img src="{{ movie.image.url }}" class="card-img-top" alt="Movie Image">
+                <div class="card-body">
+                    <h5 class="card-title">{{ movie.title }}</h5>
+                    <p class="card-text">{{ movie.description }}</p>
+                    <p class="card-text"><strong>Year:</strong> {{ movie.year }}</p>
+                    <p class="card-text"><strong>Genre:</strong> {{ movie.genre }}</p>
+                    {% if movie.url %}
+                        <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
+                    {% endif %}
+                </div>
             </div>
         </div>
-    </div>
         {% endfor %}
+    </div>
 
     <h2>Join our mailing list:</h2>
-     <form action="{% url 'signup' %}">
+    <form action="{% url 'signup' %}">
         <div class="mb-3">
-            <label for="email" class="form-label"> Enter your email: </label>
+            <label for="email" class="form-label">Enter your email:</label>
             <input type="email" class="form-control" name="email" />
         </div>
         <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
-
-
 </div>
+
 {% endblock content %}
+
